# mergify-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  auth.py  cli.py  database.py  docker-compose.yml  main.py  models.py  neighbor_finder.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: __init__.py  routes.py  schemas.py
config/: __init__.py  auth.py  database.py
services/: __init__.py  github_client.py  neighbor_finder.py
tests/: conftest.py  test_docs.py  test_github_services.py  test_star_neighbours_route.py
